--- a/Portfolio/02-CSS/css/diagonal.css
+++ b/Portfolio/02-CSS/css/diagonal.css
@@ -1,3 +1,97 @@
 body {
     margin: 0;
+    background-color: #e3e3e3; 
+}
+
+.Ejercicio{
+    background-color: #182548;
+    align-content: center;
+    height: 100px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.regresar{
+    background-color: #182548;
+    align-content: center;
+    height: 100px;
+    width: 300px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-left: auto;
+    margin-right: 100px;
+}
+
+h1{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: #b8bcdb;
+    text-align: center;
+    margin: 0 auto; 
+}
+
+.top-container{
+    width: 200px;
+    height: 200px;
+    background-color: #003a86;
+    border-color: black;
+    border-width: 10px;
+    border-style: solid;
+    padding: 20px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.middle-container{
+    width: 200px;
+    height: 200px;
+    background-color: #c80000;
+    border-color: black;
+    border-width: 20px;
+    border-style: solid;
+    position: absolute;
+    top:200px;
+    left:200px;
+}
+
+.bottom-container{
+    width: 200px;
+    height: 200px;
+    background-color: #e9be00;
+    border-color: black;
+    border-width: 10px;
+    border-style: solid;
+    position: absolute;
+    top:400px;
+    left:400px;
+}
+
+.BoxExe1{
+    align-content: center;
+    background-color: #4a61a6;
+    height: 700px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.Exe1{
+    width: 604px;
+    height: 604px;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    border-color: black;
+    border-width: 3px;
+    border-style: solid;
+    position: relative;
 }
