--- a/Portfolio/02-CSS/css/position.css
+++ b/Portfolio/02-CSS/css/position.css
@@ -1,3 +1,129 @@
 body {
     margin: 0;
+    background-color: #e3e3e3; 
+}
+
+h1{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: #b8bcdb;
+    text-align: center;
+    margin: 0 auto; 
+}
+
+.regresar{
+    background-color: #182548;
+    align-content: center;
+    height: 100px;
+    width: 300px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-left: auto;
+    margin-right: 100px;
+}
+
+.Ejercicio{
+    background-color: #182548;
+    align-content: center;
+    height: 100px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.BoxExe1{
+    align-content: center;
+    background-color: #4a61a6;
+    height: 700px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.Exe1{
+    width: 600px;
+    height: 600px;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    border-color: black;
+    border-width: 3px;
+    border-style: solid;
+    position: relative;
+}
+
+.BoxExe1{
+    align-content: center;
+    background-color: #4a61a6;
+    height: 700px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.ExeHorizontal{
+    width: 200px;
+    height: 600px;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    border-color: black;
+    border-width: 3px;
+    border-style: solid;
+    position: relative;
+}
+
+.RedBoxCuad3{
+    width: 200px;
+    height: 200px;
+    background-color: #c80000;
+    position: absolute;
+    top: 400px;
+    left: 400px;
+}
+
+.BlueBoxCuad3{
+    width: 200px;
+    height: 200px;
+    background-color: #003a86;
+    position: absolute;
+    top: 200px;
+    left: 200px;
+}
+
+.YellowBoxCuad3{
+    width: 200px;
+    height: 200px;
+    background-color: #e9be00;
+    position: absolute;
+}
+
+.RedBoxOrg3{
+    width: 200px;
+    height: 200px;
+    background-color: #c80000;
+    position: relative;
+}
+
+.BlueBoxOrg3{
+    width: 200px;
+    height: 200px;
+    background-color: #003a86;
+    position: relative;
+}
+
+.YellowBoxOrg3{
+    width: 200px;
+    height: 200px;
+    background-color: #e9be00;
+    position: relative;
 }
