--- a/Portfolio/02-CSS/css/diagonal.css
+++ b/Portfolio/02-CSS/css/diagonal.css
@@ -33,7 +33,8 @@ h1{
     margin-bottom: 50px;
     color: #b8bcdb;
     text-align: center;
-    margin: 0 auto; 
+    margin: 0 auto;
+    text-decoration: none;
 }
 
 .top-container{
