--- a/Portfolio/02-CSS/css/index.css
+++ b/Portfolio/02-CSS/css/index.css
@@ -1,1 +1,66 @@
+body {
+    margin: 0;
+    background-color: #e3e3e3; 
+}
 
+h1{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: #b8bcdb;
+    text-align: center;
+    margin: 0 auto; 
+    text-decoration: none;
+}
+
+.texto-grande {
+    margin-top: 300px;
+    margin-bottom: 150px;
+    font-size: 70px;
+    color: #003a86;
+    text-align: center;
+    margin: 0 auto; 
+}
+
+.Cuadrado1{
+    background-color: #173b7a;
+    align-content: center;
+    height: 100px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.Cuadrado2{
+    background-color: #104694;
+    align-content: center;
+    height: 100px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.Cuadrado3{
+    background-color: #4a61a6;
+    align-content: center;
+    height: 100px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.Cuadrado4{
+    background-color: #717eb8;
+    align-content: center;
+    height: 100px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
