--- a/Portfolio/04-BootstrapShowcase/CSS/styles.css
+++ b/Portfolio/04-BootstrapShowcase/CSS/styles.css
@@ -1,4 +1,3 @@
-/* Estilos globales */
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #f0d7ff;
@@ -15,8 +14,20 @@ body {
 .btn {
     color: rgb(219, 173, 210);
     background-color: rgb(107, 62, 137);
+    border: 2px solid rgb(227, 9, 183);
+    
     display: flex;
     justify-content: center;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+    margin: 15px;
+}
+
+.btn:hover {
+    background-color: #d63384;
 }
 
 .text-center {
@@ -27,3 +38,18 @@ div{
     margin-top: 10px;
 }
 
+.border{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.top{
+    margin-top: 50px;
+}
+
+.centradobtn{
+    position: absolute;
+    bottom: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
